--- a/osr-evaluation.tex
+++ b/osr-evaluation.tex
@@ -257,7 +257,7 @@ The list of benchmarks and transformations that are effective on their hottest m
 \end{small}
 %\end{adjustbox}
 \end{center}
-\caption{\label{tab:OSR-alC-bench-desc} Optimizations and utility passes effective on the hottest function of each benchmark. Optimization passes have been applied in the same order (left-to-right) as they appear in the table. Utility passes {\em LC} and {\em LCSSA} are pre-requisites of {\em LICM}.}
+\caption{\label{tab:OSR-alC-bench-desc} Optimizations and utility passes effective on the hottest function of each benchmark. Optimization passes have been applied in the same order (left-to-right) as they appear in the table. Utility passes {\em LC} and {\em LCSSA} are prerequisites-requisites of {\em LICM}.}
 \end{table}
 
 \begin{table}[!t]
