--- a/osr-language-reasoning.tex
+++ b/osr-language-reasoning.tex
@@ -168,7 +168,7 @@ Let $T$ be a rewrite rule as in \ref{de:rewrite-rule}. Transformation function $
 A rewrite rule $T$ is {\em semantics-preserving} if for any program $\pi$ it holds $\mysem{\pi}=\mysem{\pi'}$, where $\pi'=\mysem{T}(\pi)$.
 \end{definition}
 
-\noindent Examples of semantics-preserving rules for classic compiler optimizations (as proven in~\cite{Lacey02,Lacey04}) are given in \myfigure\ref{fig:sample-trans}.
+\noindent Examples of semantics-preserving rules for classic compiler optimizations (as proved in~\cite{Lacey02,Lacey04}) are given in \myfigure\ref{fig:sample-trans}.
 
 \begin{figure}[ht]
 \begin{center}
