--- a/state-of-art.tex
+++ b/state-of-art.tex
@@ -27,7 +27,7 @@ Program analysis and optimization techniques can be divided in two categories: {
 
 Examples of intra-procedural profiles are those collected by vertex, edge, and path profilers. A vertex profile counts the number of executions of each vertex (basic block) in a control-flow graph, while an edge profile counts the number of times each control-flow edge executes~\cite{Ball94}. A vertex profile can be used to guide a compiler in basic block placement. An edge profile always determines a vertex profile, and can be used to enable more powerful optimizations: for instance, Bond and McKinley~\cite{Bond05} investigated the impact of using continuous edge profiles to drive optimization in Jikes RVM, with benefits in terms of, e.g., code reordering and register allocation. Path profiles provide finer-grained information, as they can capture acyclic paths that are taken in the control-flow graph of a routine. The seminal work by Ball and Larus~\cite{Ball96} has spawned much research interest in the last 15 years in the design of novel techniques for collecting longer path profiles, as they can be used to guide several optimizations.
 
-Inter-procedural profiles aim at capturing the interactions between functions in a program. For instance, context-sensitive profiles associate a metric with a sequence of procedures (a {\em calling context}) that are active during intervals of a program's execution~\cite{Ammons97}. In the context of statically compiled languages, expensive inter-procedural analyses can be used to attemp to prove invariants; in a managed environment, a profile can be used to speculate that invariants hold without proving them correct for all possible inputs. A virtual machine can thus apply many transformations speculatively, relying on ad-hoc invalidation mechanisms when execution diverges from the assumptions made during compilation.
+Inter-procedural profiles aim at capturing the interactions between functions in a program. For instance, context-sensitive profiles associate a metric with a sequence of procedures (a {\em calling context}) that are active during intervals of a program's execution~\cite{Ammons97}. In the context of statically compiled languages, expensive inter-procedural analyses can be used to attempt to prove invariants; in a managed environment, a profile can be used to speculate that invariants hold without proving them correct for all possible inputs. A virtual machine can thus apply many transformations speculatively, relying on ad-hoc invalidation mechanisms when execution diverges from the assumptions made during compilation.
 
 \section{Code Optimizers}
 Mainstream runtime systems can resort to a large variety of techniques to generate executable code. A modern virtual machine typically relies on an interpreter (or a very fast baseline compiler) to execute a function the first time it is encountered, and then resorts to a {\em just-in-time} (JIT) compilation system, usually equipped with multiple optimization levels, to generate efficient code for a program's hot portions.
@@ -63,7 +63,7 @@ Lessons learned from the devirtualization of function calls in statically compil
 
 \paragraph*{Multiversioning and Specialization.} A compiler may decide to generate multiple implementations of a code sequence, and let the program choose the best one at run time. In a dynamic setting, versions can be generated using run-time profiling information: the guarded inlining example discussed above is indeed a form of multiversioning. To divert execution to a safe code version, a compiler can either add a slow path in the code - possibly separated from the fast path to avoid polluting the results of data-flow analyses - or trigger an OSR when a guard fails. The latter approach has been used for instance in SELF-91 to support deferred compilation~\cite{Chambers91}; HotSpot and Jikes RVM implement it in a similar manner.
 
-Specialization is a form of multi-versioning that speculates on run-time facts, and is thus closely related to partial evaluation. When a type inference engine cannot infer precise information for a function, type-based JIT specialization can be used to generate specialized copies of the function body~\cite{Cooper92} by speculating on each argument's type. Value-based JIT specialization~\cite{Santos13} creates specialized function bodies based on the run-time values for a subset of the arguments, and can be effective for functions that are either called only once, or repeatedly invoked with the same parameters.
+Specialization is a form of multiversioning that speculates on run-time facts, and is thus closely related to partial evaluation. When a type inference engine cannot infer precise information for a function, type-based JIT specialization can be used to generate specialized copies of the function body~\cite{Cooper92} by speculating on each argument's type. Value-based JIT specialization~\cite{Santos13} creates specialized function bodies based on the run-time values for a subset of the arguments, and can be effective for functions that are either called only once, or repeatedly invoked with the same parameters.
 
 \paragraph*{Instruction Scheduling.} Instruction scheduling techniques attempt to maximize the flow of instructions through a processor's pipeline by reordering them on the basis of observed profiles. Extensively studied in static code generation for superscalar processors, these techniques have been explored for JIT compilers as well~\cite{Arnold05, Touati14}.
 
