--- a/thesis.tex
+++ b/thesis.tex
@@ -41,7 +41,7 @@
 
 \maketitle
 
-\dedication{To my maternal grandfather,\\\smallskip after whom I took the determination and the ability to pursue this goal}
+\dedication{To my maternal grandfather Rocco Manzolillo,\\\smallskip after whom I took the determination and the ability to pursue this goal}
 
 \begin{abstract}
 \input{abstract}
